manual merge shop

--- a/template.conf
+++ b/template.conf
@@ -44,7 +44,9 @@
     "addon.less",
     "sky.less",
     "skyfull.less",
-    "journal.less"
+    "journal.less",
+    "product.less",
+    "swiper.css"
   ]
 
 }
